--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,7 +6,7 @@ steps:
   - task: Npm@1
     inputs:
       command: "custom"
-      customcommand: "install --production"
+      customCommand: "install --production"
   - script: |
       npm install
       npm test
