--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,7 +5,7 @@ trigger:
 steps:
   - task: Npm@1
     inputs:
-      command: "install"
+      command: "custom"
       customCommand: "install --production"
   - script: |
       npm install
