--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.75.0",
     "webpack": "^4.22.0",
     "webpack-cli": "^3.1.2"
   }
