--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "all-test:watch": "jest --watch --testRegex=.*\\.i?spec\\.js$"
   },
   "jest": {
-  "testResultsProcessor": "jest-junit",
-  "collectCoverage": true,
-  "coverageReporters": [
-    "cobertura",
-    "html"
-  ]
-}
+    "testResultsProcessor": "jest-junit",
+    "collectCoverage": true,
+    "coverageReporters": [
+      "cobertura",
+      "html"
+    ]
+  },
   "dependencies": {
     "bootstrap": "^4.1.3",
     "bootstrap-datepicker": "^1.8.0",
@@ -43,7 +43,7 @@
     "autoprefixer": "^9.2.1",
     "css-loader": "^1.0.0",
     "jest": "^29.0.0",
-    "jest-junit": "^16.0.0"
+    "jest-junit": "^16.0.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
     "postcss-loader": "^3.0.0",
